<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mist_drivers_launch</name>
  <version>0.0.0</version>
  <description>Package to launch sensors on MIST robots</description>
  <maintainer email="lajoie.py@gmail.com">Pierre-Yves Lajoie</maintainer>
  <license>MIT</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
